pure html ready

--- a/index.html
+++ b/index.html
@@ -157,7 +157,87 @@
             </p>
           </div>
           <!-- Colours -->
-          <div></div>
+          <div>
+            <div>
+              <div id="nonmetallic">
+                <div id="silver">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Silver.png"
+                    alt="Silver Versa"
+                  />
+                </div>
+                <div id="DeepImpactBlue">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/DeepImpactBlue.png"
+                    alt="DeepImpactBlue Versa"
+                  />
+                </div>
+                <div id="red">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Red.png"
+                    alt="Red Versa"
+                  />
+                </div>
+              </div>
+              <div id="metallic">
+                <div id="metalicious">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Metalicious.png"
+                    alt="Metalicious Versa"
+                  />
+                </div>
+                <div id="guard">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Guard.png"
+                    alt="Guard Versa"
+                  />
+                </div>
+                <div id="solar">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Solar.png"
+                    alt="Solar Versa"
+                  />
+                </div>
+                <div id="blazerblue">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/BlazerBlue.png"
+                    alt="BlazerBlue Versa"
+                  />
+                </div>
+                <div id="black">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Black.png"
+                    alt="Black Versa"
+                  />
+                </div>
+                <div id="magnetic">
+                  <img
+                    src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Magnetic.png"
+                    alt="Magnetic Versa"
+                  />
+                </div>
+              </div>
+            </div>
+            <div>
+              <nav>
+                <a href="#silver"></a>
+                <a href="#deepImpactBlue"></a>
+                <a href="#red"></a>
+                <a href="#metalicious"></a>
+                <a href="#guard"></a>
+                <a href="#solar"></a>
+                <a href="#blazerBlue"></a>
+                <a href="#black"></a>
+                <a href="#magnetic"></a>
+              </nav>
+            </div>
+            <div>
+              <nav>
+                <a href="#nonmetallic"></a>
+                <a href="#metallic"></a>
+              </nav>
+            </div>
+          </div>
           <!-- Interior Trim -->
           <div>
             <div>
