--- a/index.html
+++ b/index.html
@@ -29,45 +29,77 @@
             />
           </a>
         </div>
-        <nav>
-          <ul class="list-menu">
-            <li class="adjusting">
-              Contrast <a href="#"><i class="fas fa-font contrast"></i></a>
-              <a href="#"><i class="fas fa-font"></i></a>
-            </li>
-            <li class="adjusting">
-              Font Size
-              <a href="#"><i class="fas fa-font">-</i></a>
-              <a href="#"><i class="fas fa-font"></i></a>
-              <a href="#"><i class="fas fa-font">+</i></a>
-            </li>
-            <li><a href="#">Download a Brochure</a></li>
-            <li><a href="#">Blog</a></li>
-            <li>Call us on 0330 042 5909</li>
-          </ul>
-          <ul class="list-menu">
-            <li><a href="#"></a>New Vehicles</li>
-            <li><a href="#"></a>Nearly New/Used Vehicles</li>
-            <li><a href="#"></a>Motability</li>
-            <li><a href="#"></a>Aftercare</li>
-            <li><a href="#"></a>Contact Us</li>
-          </ul>
+        <nav class="top-header__navs">
+          <div class="top-nav">
+            <ul class="top-nav--menu">
+              <li class="top-nav__item">
+                Contrast
+                <a href="#"
+                  ><i
+                    class="fas fa-font top-nav__item--adjustments-border top-nav__item--contrast"
+                  ></i
+                ></a>
+                <a href="#"
+                  ><i class="fas fa-font top-nav__item--adjustments-border"></i
+                ></a>
+              </li>
+              <li class="top-nav__item adjusting">
+                Font Size
+                <a href="#"
+                  ><i class="fas fa-font top-nav__item--adjustments-border"
+                    >-</i
+                  ></a
+                >
+                <a href="#"
+                  ><i class="fas fa-font top-nav__item--adjustments-border"></i
+                ></a>
+                <a href="#"
+                  ><i class="fas fa-font top-nav__item--adjustments-border"
+                    >+</i
+                  ></a
+                >
+              </li>
+              <li class="top-nav__item ">
+                <a href="#" class="top-nav__item--links-color"
+                  >Download a Brochure</a
+                >
+              </li>
+              <li class="top-nav__item ">
+                <a href="#" class="top-nav__item--links-color">Blog</a>
+              </li>
+              <li class="top-nav__item top-nav__item--call-color">
+                <i class="fas fa-phone top-nav__item--mirror"></i>Call us on 0330 042 5909
+                <i class="fas fa-info-circle"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="second-nav">
+            <ul class="second-nav--menu">
+              <li><a href="#"></a>New Vehicles</li>
+              <li><a href="#"></a>Nearly New/Used Vehicles</li>
+              <li><a href="#"></a>Motability</li>
+              <li><a href="#"></a>Aftercare</li>
+              <li><a href="#"></a>Contact Us</li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
 
     <header>
-      <div class="top-menu">
+      <div class="banner-menu">
         <div>
-          <a href="#">Versa Connect</a>
+          <a href="#" class="banner-menu__item--links">Versa Connect<i class="fas fa-sort-down"></i></a>
         </div>
-        <nav>
-          <ul class="list-menu top-menu__items">
-            <li><a href="#">Overview</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Models</a></li>
-            <li><a href="#">Optional Extras</a></li>
-          </ul>
+        <nav class="banner-menu--width">
+          <!-- <div> -->
+            <ul class="banner-menu__item">
+              <li><a href="#" class="banner-menu__item--links">Overview</a></li>
+              <li><a href="#" class="banner-menu__item--links">Offers</a></li>
+              <li><a href="#" class="banner-menu__item--links">Models</a></li>
+              <li><a href="#" class="banner-menu__item--links">Optional Extras</a></li>
+            </ul>
+          <!-- </div> -->
         </nav>
       </div>
     </header>
