--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <a href="#" class="top-nav__item--links-color">Blog</a>
               </li>
               <li class="top-nav__item top-nav__item--call-color">
-                <i class="fas fa-phone top-nav__item--mirror"></i>Call us on 0330 042 5909
+                <i class="fas fa-phone top-nav__item--mirror"></i>Call us on
+                0330 042 5909
                 <i class="fas fa-info-circle"></i>
               </li>
             </ul>
@@ -89,17 +90,25 @@
     <header>
       <div class="banner-menu">
         <div>
-          <a href="#" class="banner-menu__item--links">Versa Connect<i class="fas fa-sort-down"></i></a>
+          <a href="#" class="banner-menu__item--color"
+            >Versa Connect<i class="fas fa-sort-down"></i
+          ></a>
         </div>
         <nav class="banner-menu--width">
-          <!-- <div> -->
-            <ul class="banner-menu__item">
-              <li><a href="#" class="banner-menu__item--links">Overview</a></li>
-              <li><a href="#" class="banner-menu__item--links">Offers</a></li>
-              <li><a href="#" class="banner-menu__item--links">Models</a></li>
-              <li><a href="#" class="banner-menu__item--links">Optional Extras</a></li>
-            </ul>
-          <!-- </div> -->
+          <ul class="banner-menu__item">
+            <li class="banner-menu__items--links">
+              <a href="#" class="banner-menu__item--color">Overview</a>
+            </li>
+            <li class="banner-menu__items--links">
+              <a href="#" class="banner-menu__item--color">Offers</a>
+            </li>
+            <li class="banner-menu__items--links">
+              <a href="#" class="banner-menu__item--color">Models</a>
+            </li>
+            <li class="banner-menu__items--links">
+              <a href="#" class="banner-menu__item--color">Optional Extras</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -110,17 +119,17 @@
         <img
           src="https://www.bristolstreetversa.com/custom/51650.jpg"
           alt="Versa Connect's Banner"
-          class="container"
+          class="banner__image"
         />
         <div class="banner__details">
-          <h1>Versa Connect</h1>
-          <p>
+          <h1 class="banner__details--larger-heading">Versa Connect</h1>
+          <p class="banner__details--line-height">
             "The Ford Tourneo Connect is a relaxing and comfortable place to be.
             Great to drive, great to sit in, it boasts premium finishes, high
             quality materials and fuel efficiency without compromising everyday
             practicality".
           </p>
-          <button>Make an Enquiry</button>
+          <button class="banner__button">Make an Enquiry</button>
         </div>
       </section>
 
