--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img
               src="https://www.bristolstreetversa.com/custom/51649.png"
               alt="Vertu Motors logo"
-              class="container"
+              class="top-header__logo--width"
             />
           </a>
         </div>
@@ -347,31 +347,37 @@
         </div>
         <button>View our Versa Connect offers</button>
       </section>
+      <!-- Slide Show -->
       <section>
-        <div>
-          <div>
+        <div class="slideshow">
+          <div class="slideshow__slide slideshow-slide--fade">
             <img
               src="https://www.bristolstreetversa.com/custom/50563.jpg"
               alt="Versa Gallery 1"
-              class="container"
+              class="slideshow-slide--width"
             />
+            <div class="slideshow__counter">1 / 3</div>
           </div>
-          <div>
+          <div class="slideshow__slide slideshow-slide--fade">
             <img
               src="https://www.bristolstreetversa.com/custom/50564.jpg"
               alt="Versa Gallery 2"
-              class="container"
+              class="slideshow-slide--width"
             />
+            <div class="slideshow__counter">2 / 3</div>
           </div>
-          <div>
+          <div class="slideshow__slide slideshow-slide--fade">
             <img
               src="https://www.bristolstreetversa.com/custom/50565.jpg"
               alt="Versa Gallery 3"
-              class="container"
+              class="slideshow-slide--width"
             />
+            <div class="slideshow__counter">3 / 3</div>
           </div>
-          <!-- <a href=""></a> next photo -->
-          <!-- <a href=""></a>previous photo -->
+
+          <!-- Next and previous buttons -->
+          <a class="slideshow__previous" onclick="plusSlides(-1)"><i class="fas fa-chevron-left"></i></a>
+          <a class="slideshow__next" onclick="plusSlides(1)"><i class="fas fa-chevron-right"></i></a>
         </div>
         <div class="information">
           <div class="information">
