--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="container">
-        <div class="logo logo--right-border">
+        <div class="logo logo--padding logo--right-border">
           <a href="#">
             <img
               src="https://www.bristolstreetversa.com/custom/51649.png"
@@ -93,35 +93,36 @@
       </div>
     </header>
     <main>
+      <!-- banner menu -->
       <section>
-        <div class="container container--padding nav nav--large nav--blue nav--space-between">
-          <div>
-            <a href="#" class="banner-menu__item--color">Versa Connect<i class="fas fa-sort-down"></i></a>
+        <div class="container--padding container--fit nav nav--large nav--blue nav--space-between">
+          <div class="nav">
+            <a href="#" class="nav__item--links-decoration">Versa Connect<i class="fas fa-sort-down"></i></a>
           </div>
-          <nav class="banner-menu--width">
-            <ul class="banner-menu__item">
-              <li class="banner-menu__items--links">
-                <a href="#" class="banner-menu__item--color">Overview</a>
+          <nav class="container container--padding container--forty">
+            <ul class="container nav nav--space-between">
+              <li>
+                <a href="#" class="nav__item--links-decoration nav__item--links-underline">Overview</a>
               </li>
-              <li class="banner-menu__items--links">
-                <a href="#" class="banner-menu__item--color">Offers</a>
+              <li>
+                <a href="#" class="nav__item--links-decoration nav__item--links-underline">Offers</a>
               </li>
-              <li class="banner-menu__items--links">
-                <a href="#" class="banner-menu__item--color">Models</a>
+              <li>
+                <a href="#" class="nav__item--links-decoration nav__item--links-underline">Models</a>
               </li>
-              <li class="banner-menu__items--links">
-                <a href="#" class="banner-menu__item--color">Optional Extras</a>
+              <li>
+                <a href="#" class="nav__item--links-decoration nav__item--links-underline">Optional Extras</a>
               </li>
             </ul>
           </nav>
         </div>
       </section>
       <!-- main banner -->
-      <section class="banner">
+      <section class="container--fit">
         <img
           src="https://www.bristolstreetversa.com/custom/51650.jpg"
           alt="Versa Connect's Banner"
-          class="banner__image"
+          class="banner"
         />
         <div class="banner__details">
           <h1 class="banner__details--larger-heading">Versa Connect</h1>
@@ -131,13 +132,13 @@
             quality materials and fuel efficiency without compromising everyday
             practicality".
           </p>
-          <button class="banner__button">Make an Enquiry</button>
+          <button class="button button--wide">Make an Enquiry</button>
         </div>
       </section>
 
       <!-- information -->
-      <section class="information">
-        <div class="tabs">
+      <section class="ignor">
+        <div>
           <nav>
             <ul class="list-menu information">
               <li class="tabs__selector"><a href="#">Dimensions</a></li>
@@ -386,9 +387,10 @@
           ></a>
         </div>
       </section>
+      <!-- accessibility -->
       <section>
-        <div class="accessibility">
-          <div class="accessibility__paragraphs">
+        <div class="container--narrow container--grey container__text--gap">
+          <div class="container__text">
             <p>
               The Versa Connect takes these attributes and focuses on extending
               them seamlessly into the wheelchair accessible aspects of our
@@ -413,9 +415,10 @@
               boot space is created making the Versa Connect even more
               practical.
             </p>
+            
           </div>
-          <div class="accessibility__button">
-            <button class="accessibility__button--large">
+          <div class="container container--center">
+            <button class="button button--margin-bottom">
               View our Versa Connect offers
             </button>
           </div>
@@ -423,13 +426,13 @@
       </section>
 
       <!-- Keep You Going -->
-      <section class="banner">
+      <section class="container--fit">
         <div>
           <div>
             <img
               src="https://www.bristolstreetversa.com/custom/51651.jpg"
               alt="Keep You Going"
-              class="banner__image"
+              class="banner"
             />
           </div>
           <div class="banner__details">
@@ -441,15 +444,15 @@
               always plain sailing - and that's why we are committed to step in
               to make sure we are #KeepingYouGoing.
             </p>
-            <button class="banner__button">More Information</button>
+            <button class="button button--wide">More Information</button>
           </div>
         </div>
       </section>
     </main>
     <footer>
       <div class="footer container--narrow">
-        <div class="flex-row">
-          <div class="column--forty">
+        <div class="container container--padding-bottom nav--space-between">
+          <div class="container--forty">
             <div class="logo">
               <img
                 src="https://www.bristolstreetversa.com/custom/51649.png"
@@ -465,17 +468,17 @@
               </p>
             </div>
           </div>
-          <div class="links-list">
+          <div class="container nav--center nav__item--links-decoration">
             <div>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">New Vehicles</a></li>
-                <li><a href="#">Motability</a></li>
-                <li><a href="#">Newly New & Used</a></li>
-                <li><a href="#">Aftercare</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="">Blog</a></li>
+              <ul class="nav nav--vertical nav--fixed-height">
+                <li class="nav__item"><a href="#" class="nav__item--white nav__item--links-decoration">Home</a></li>
+                <li class="nav__item"><a href="#" class="nav__item--white nav__item--links-decoration">New Vehicles</a></li>
+                <li class="nav__item"><a href="#" class="nav__item--white nav__item--links-decoration">Motability</a></li>
+                <li class="nav__item"><a href="#" class="nav__item--white nav__item--links-decoration">Neary New & Used</a></li>
+                <li class="nav__item"><a href="#" class="nav__item--white nav__item--links-decoration">Aftercare</a></li>
+                <li class="nav__item"><a href="#" class="nav__item--white nav__item--links-decoration">Contact Us</a></li>
+                <li class="nav__item"><a href="#" class="nav__item--white nav__item--links-decoration">Terms</a></li>
+                <li class="nav__item"><a href="#" class="nav__item--white nav__item--links-decoration">Blog</a></li>
               </ul>
             </div>
             <div>
@@ -507,7 +510,7 @@
             </div>
             <input type="text" placeholder="Name" class="inquery__input" />
             <input type="text" placeholder="Number" class="inquery__input" />
-            <button type="submit" class="button">Go</button>
+            <button type="submit" class="button button--form">Go</button>
           </form>
         </div>
       </div>
