seperate panel first

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
           <div class="container--narrow">
             <nav>
               <ul class="nav nav--stretch nav--space-around nav--panel">
-                <li class="nav--stretch nav__item--blue nav__item--border-right"><a href="#" class="nav__item--links-decoration">Dimensions</a></li>
-                <li class="nav--stretch nav__item--blue nav__item--border-right"><a href="#" class="nav__item--links-decoration">Vehicle Layouts</a></li>
-                <li class="nav--stretch nav__item--blue nav__item--border-right"><a href="#" class="nav__item--links-decoration">Colour</a></li>
-                <li class="nav--stretch nav__item--blue"><a href="#" class="nav__item--links-decoration">Interior Trim</a></li>
+                <li class="nav__item--blue nav__item--border-right"><a href="#" class="nav__item--links-decoration">Dimensions</a></li>
+                <li class="nav__item--blue nav__item--border-right"><a href="#" class="nav__item--links-decoration">Vehicle Layouts</a></li>
+                <li class="nav__item--blue nav__item--border-right"><a href="#" class="nav__item--links-decoration">Colour</a></li>
+                <li class="nav__item--blue"><a href="#" class="nav__item--links-decoration">Interior Trim</a></li>
               </ul>
             </nav>
           </div>
